framework update and Todo List function support